# python-playground

./: .gitignore  .pre-commit-config.yaml  justfile  main.py  pyproject.toml  webgl-demo.js  webgl.html
src/python_playground/: __init__.py  conway.py  grayscale.py  koch_snowflake.py  main.py  sound.py
