[project]
name = "python-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Karpel", email = "josh.karpel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "more-itertools>=10.7.0",
    "numpy>=2.3.2",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
]

[project.scripts]
play = "python_playground.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
